@startuml frag

namespace com.example.ezvault {
    class AddItemFragment { }
    class ItemsFragment { }
    class NewUserFragment { }
    class ProfileFragment { }
    class SearchFragment { }
    class TagsFragment { }
    class WelcomeFragment {}
}

AddItemFragment --|> androidx.fragment.app.Fragment
ItemsFragment --|> androidx.fragment.app.Fragment
NewUserFragment --|> androidx.fragment.app.Fragment
ProfileFragment --|> androidx.fragment.app.Fragment
SearchFragment --|> androidx.fragment.app.Fragment
TagsFragment --|> androidx.fragment.app.Fragment
WelcomeFragment --|> androidx.fragment.app.Fragment

@enduml